kubernetes-configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-application
spec:
  selector:
    app: my-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
