kubernetes-configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-my-application
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "www.myapp.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-application
            port:
              number: 80
